--- a/test1.html
+++ b/test1.html
@@ -13,7 +13,7 @@
                 <div>
                     <input type="text" value="{=name=}">
                     <p>Hello {{name | raw}}!</p>
-                    <div><input type="button" value="Alert" onclick="zz()"/></div>
+                    <div><input type="button" value="Alert" on-click="zz"/></div>
                 </div>
             `,
             initData: function(){
